syntax = "proto3";
package shippy.service.consignment;

service ShippingService {
    rpc CreateConsignment (Consignment) returns (CreateConsignmentResponse) {
    }

    rpc GetConsignments (GetRequest) returns (GetConsignmentsResponse) {
    }
}

message Consignment {
    string id = 1;                      
    string description = 2;             
    int32 weight = 3;                   
    string vessel_id = 4;               
}

message CreateConsignmentResponse {
    bool created = 1;
    Consignment consignment = 2;
}

message GetRequest {

}

message GetConsignmentsResponse {
    repeated Consignment consignments = 1;
}

