syntax = "proto3";

package shippy.service.vessel;

service VesselService {
    rpc FindAvailable (Specification) returns (Response) {
    }
}

message Vessel {
    string id = 1;          
    int32 capacity = 2;     
    int32 max_weight = 3;   
    string name = 4;        
    bool available = 5;     
    string ower_id = 6;     
}

message Specification {
    int32 weight = 1;   
}

message Response {
    repeated Vessel vessels = 1;
}
